# SoulsAI

./: .dockerignore  .flake8  .gitignore  README.md  agent.py  clean_json.py  docker-compose.yaml  environment.yaml  generate_plots.py  iudex_qlearning.py  one_hot_encoder.py  ppo_agent.py  ppo_train.py  pyproject.toml  q_train.py  q_train_multistep.py  replay_buffer.py  setup.py  test.py  utils.py  visualization.py
.github/workflows/: github-actions.yaml
benchmark/: Dockerfile  benchmark.py  replay_buffer.py  requirements.txt  serialization.py
config/: config_d.yaml  redis.conf
distributed/client/: dummy_api.py  main.py
distributed/server/: training_node.py
docs/: conf.py  index.rst  requirements.txt  soulsai.rst
docs/core/: agent.rst  index.rst  networks.rst  noise.rst  normalizer.rst  replay_buffer.rst  scheduler.rst  transform.rst
docs/data/: gamestate_transformer.rst  index.rst  onehot.rst
docs/distributed/: index.rst
docs/distributed/client/: connector.rst  dqn_client.rst  index.rst  main.rst  ppo_client.rst  watchdog.rst
docs/distributed/common/: index.rst  serialization.rst
docs/distributed/server/: index.rst
docs/exception/: exception.rst
docs/getting_started/: general.rst  setup.rst  starting_to_train.rst
docs/server_stack/: core.rst  infrastructure.rst  monitoring.rst  overview.rst
docs/utils/: index.rst  utils.rst  visualization.rst
old/: q_train.py  q_train_multistep.py
scripts/: client_shutdown.py  collect_ground_truth_test_data.py  collect_reference_test_data.py  collect_replay.py  demo_agent.py  evaluate_iudex.py  quicksave.py  test_agent.py
scripts/pretraining/: create_dataset.py  process_dataset.py  test.py  test_autoencoder.py  train.py  train_autoencoder.py
soulsai/: __init__.py  exception.py
soulsai/core/: __init__.py  agent.py  models.py  networks.py  noise.py  normalizer.py  replay_buffer.py  scheduler.py  transform.py  utils.py
soulsai/data/: __init__.py  dataset.py  one_hot_encoder.py  transformation.py  utils.py
soulsai/distributed/: __init__.py
soulsai/distributed/client/: __init__.py  client_node.py  config_d.yaml  connector.py  dqn_client.py  main.py  ppo_client.py  watchdog.py
soulsai/training/: iudex_qlearning.py
soulsai/utils/: __init__.py  utils.py  visualization.py
soulsai/wrappers/: __init__.py  atari.py  common.py  iudex_wrappers.py  tensordict_wrapper.py
test/: README.md  compare_runs.py  multirun.py  test.py
test/common/: config_d.yaml  launch_telemetry_node.py  multirun.py  requirements.txt  telemetry_node.Dockerfile
test/dqn/: client.Dockerfile  client_node.Dockerfile  compare_runs.py  config_d.yaml  docker-compose.yaml  launch_client.py  launch_client_node.py  launch_telemetry_node.py  launch_train_node.py  launch_training_node.py  multirun.py  requirements.txt  telemetry_node.Dockerfile  train_node.Dockerfile  training_node.Dockerfile
test/dqn_atari/: client.Dockerfile  client_node.Dockerfile  config_d.yaml  docker-compose.yaml  launch_client.py  launch_client_node.py  launch_training_node.py  requirements.txt  training_node.Dockerfile
test/monitoring/: docker-compose.yaml
test/ppo/: client.Dockerfile  client_node.Dockerfile  config_d.yaml  docker-compose.yaml  launch_client.py  launch_client_node.py  launch_train_node.py  launch_training_node.py  requirements.txt  train_node.Dockerfile  training_node.Dockerfile
test/pytest/: dummy_env.py  test_wrappers.py
(+80 files in other folders)
